creusot/tests/should_fail/prusti/match/homes.stderr
error[creusot]: expected `X` found `creusot_contracts::__stubs::__prusti::Zombie<X>`
 --> homes.rs:8:17
  |
8 |         None => default
  |                 ^^^^^^^

error: aborting due to previous error

